// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icons matches snapshot 1`] = `
Object {
  "Icons": Object {
    "Icon": [Function],
    "Svgs": Object {
      "add": [Function],
      "cancel": [Function],
      "check": [Function],
      "delete": [Function],
      "edit": [Function],
      "lock": [Function],
      "save": [Function],
      "unlock": [Function],
    },
    "names": Array [
      "add",
      "cancel",
      "check",
      "delete",
      "edit",
      "lock",
      "save",
      "unlock",
    ],
  },
}
`;

exports[`Icons matches snapshot 2`] = `
Object {
  "Icon": [Function],
  "Svgs": Object {
    "add": [Function],
    "cancel": [Function],
    "check": [Function],
    "delete": [Function],
    "edit": [Function],
    "lock": [Function],
    "save": [Function],
    "unlock": [Function],
  },
  "names": Array [
    "add",
    "cancel",
    "check",
    "delete",
    "edit",
    "lock",
    "save",
    "unlock",
  ],
}
`;
